--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 	body {
 		padding-top: 50px;
-		background-color: #fffbfb;
+		background-color: #fff;
 		border-top: 5px solid #5636a2;
 		margin: 0px;
 		font-family: monospace;
@@ -23,10 +23,12 @@
 	}
 	@media (min-width: 700px) {
 		.margin{
-			margin-bottom: 2%;			
+			margin-bottom: 2%;
+            font-size: 120%;
 		}
 	}
 	@media (max-width: 700px){ 
+        
 		.margin {
 			margin-bottom: 7%;
 		}
