feature : cards added

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,6 +3,7 @@
 @import "./header.css";
 @import "./skills.css";
 @import "./projects.css";
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/brands.min.css");
 
 .App {
   text-align: center;
@@ -34,7 +35,133 @@
 } */
 
 .App-link {
-  color: #61dafb;
+  color: var(--link-color);
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.sub-text {
+  max-width: 50%;
+  text-align: justify;
+}
+
+.mx-1 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
+.px-1 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.my-1 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
+.py-1 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+h1 {
+  font-size: 5rem;
+}
+
+h2 {
+  font-size: 3rem;
+  margin-bottom: 0;
+}
+
+.info-text {
+  color: var(--link-color);
+}
+
+.card-row {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.card-row a {
+  text-decoration: none;
+  text-align: start;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  width: 350px;
+  margin: 1rem 0;
+  padding: 1rem 1rem 1.8rem 1rem;
+  border-radius: 32px;
+  background-color: #272935;
+  color: white;
+}
+
+.card img {
+  width: 100%;
+  border-radius: 32px;
+  max-height: 200px;
+  filter: brightness(84%) saturate(132%) contrast(103%);
+  -webkit-filter: brightness(84%) saturate(132%) contrast(103%);
+  -moz-filter: brightness(84%) saturate(132%) contrast(103%);
+}
+
+.card a {
+  width: 100%;
+  border-radius: 32px;
+  max-height: 200px;
+  font-style: normal;
+  text-decoration: none;
+}
+
+.card .card-heading {
+  font-size: 1.3rem;
+  line-height: 1.6;
+  font-weight: bold;
+  margin-bottom: 0;
+}
+
+.card .card-details,
+.card .read-more {
+  font-size: 1rem;
+  line-height: 1.6;
+  color: var(--secondary-font-color);
+}
+
+.card .read-more {
+  color: var(--link-color);
+  font-weight: 800;
+  align-self: flex-start;
+}
+
+@media screen and (max-width: 768px) {
+  .sub-text {
+    max-width: 100%;
+    text-align: justify;
+  }
+  .card-row {
+    flex-flow: row nowrap;
+    overflow-x: auto;
+    padding: 1rem;
+    margin-left: -1rem;
+  }
+  .card {
+    margin: 0 1rem 0 0;
+    max-width: 60vw;
+  }
 }
 
 /* @keyframes App-logo-spin {
