--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -1,9 +1,20 @@
 .App-projects {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
+  align-items: flex-start;
+  justify-content: flex-start;
+  max-width: 100%;
   min-height: 100vh;
-  background-color: rgb(111, 83, 156);
+  background-color: var(--project-bg-color);
+  /* background-image: url("../images/programming.svg"); */
+  background-size: 700px;
+  background-repeat: no-repeat;
+  background-position-y: top;
+  background-position-x: right;
+  font-size: calc(10px + 2vmin);
+  border-top: 1px solid saddlebrown;
+}
+
+.App-projects .info-text {
+  margin-top: 5%;
 }
