--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -3,7 +3,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  max-width: 100%;
   min-height: 100vh;
-  background-color: rgb(165, 163, 57);
+  background-color: var(--skills-bg-color);
+  font-size: calc(10px + 2vmin);
+  border-top: 1px solid saddlebrown;
 }
