--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,6 +1,10 @@
 .App-header {
   background-color: var(--background-color);
-  min-height: 100vh;
+  background-image: url("../images/self_half.png");
+  background-size: contain;
+  background-position: left;
+  background-repeat: no-repeat;
+  min-height: 95vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,16 +15,78 @@
 }
 
 .App-header .App-profile {
+  width: 50vw;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
 }
 
+.App-header .App-profile h1 {
+  padding-top: 0;
+}
+
+.App-header .App-profile .sub-text {
+  margin-top: 0;
+  max-width: 100%;
+}
+
 .App-header ul {
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
   align-items: flex-start;
   list-style: none;
   width: 100%;
+  padding: 0;
+  margin-top: 0;
+}
+
+.App-header ul li {
+  padding-right: 5%;
+  font-size: 30px;
+}
+
+.App-header ul li a.twitter span:hover {
+  color: #1d9bf0;
+}
+.App-header ul li a.outlook span:hover {
+  color: #0078d4;
+}
+.App-header ul li a.github span:hover {
+  color: #fff;
+}
+.App-header ul li a.stackoverflow span:hover {
+  background: -webkit-linear-gradient(#ec7c22, rgb(185, 185, 185));
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.App-header ul li a.linkedin span:hover {
+  color: #0077b5;
+  background: radial-gradient(white 60%, transparent 64%);
+}
+.App-header ul li a:hover {
+  text-decoration: none;
+}
+
+.App-header ul li span:hover {
+  color: var(--secondary-font-color);
+}
+
+@media screen and (max-width: 768px) {
+  .App-header {
+    padding-left: 0;
+    min-height: 90vh;
+    background-image: none;
+  }
+
+  .App-header .App-profile {
+    width: auto;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .App-header ul li {
+    padding-right: 10%;
+  }
 }
