--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -34,12 +34,12 @@
 }
 
 .nav-links {
-  flex-basis: 20%;
+  flex-basis: 50%;
 }
 
 .nav-links ul {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
 }
 
