--- a/src/styles/dark.css
+++ b/src/styles/dark.css
@@ -87,7 +87,7 @@ input:checked + .slider:before {
 }
 
 input:checked + .slider {
-  background-color: cornflowerblue;
+  background-color: var(--link-color);
 }
 .slider.round {
   border-radius: 34px;
