--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,13 +1,13 @@
 .App-header {
   background-color: var(--background-color);
-  background-image: url("../images/self_half.png");
+  background-image: url("../images/self__half.webp");
   background-size: contain;
   background-position: left;
   background-repeat: no-repeat;
   min-height: 95vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   padding-left: calc(5px + 1% + 2rem);
@@ -15,7 +15,7 @@
 }
 
 .App-header .App-profile {
-  width: 50vw;
+  width: 70vw;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
