--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -107,14 +107,15 @@ h2 {
 .card {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-around;
-  width: 350px;
+  width: 340px;
   margin: 1rem 0;
   padding: 1rem 1rem 1.8rem 1rem;
   border-radius: 32px;
   background-color: #272935;
   color: white;
+  min-height: 425px;
 }
 
 .card img {
@@ -139,25 +140,68 @@ h2 {
   line-height: 1.6;
   font-weight: bold;
   margin-bottom: 0;
+  text-align: left;
 }
 
 .card .card-details,
 .card .read-more {
   font-size: 1rem;
   line-height: 1.6;
-  color: var(--secondary-font-color);
 }
 
-.card .read-more {
-  color: var(--link-color);
+.card button .km-text:hover {
+  text-decoration: underline;
+}
+.card button {
   font-weight: 800;
-  align-self: flex-start;
+  font-family: "Josefin Sans", "sans-serif";
+  color: #fff;
+  cursor: pointer;
+  background: var(--link-color);
+  border: none;
+  border-radius: 15px;
+  padding: 0.5rem 1rem;
+}
+
+.card button:disabled {
+  background: #ccc;
+  color: #fff;
+}
+
+.g-text:hover {
+  background: rgb(63, 94, 251);
+  background: linear-gradient(
+    90deg,
+    rgba(63, 94, 251, 1) 0%,
+    rgba(252, 70, 107, 1) 100%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: background-position 0.4s, color 0.4s;
+  background-position: 100% 50%;
+  text-decoration: none;
+}
+
+.flag {
+  background-image: linear-gradient(
+    0deg,
+    #138808 33%,
+    #ffffff 33%,
+    #ffffff 66%,
+    #ff9933 66%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-position: 100% 50%;
+  text-decoration: none;
 }
 
 @media screen and (max-width: 768px) {
   .sub-text {
     max-width: 100%;
-    text-align: justify;
+    text-align: left;
   }
   .card-row {
     flex-flow: row nowrap;
