--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,7 +9,7 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  margin-top: 50px;
+  /* margin-top: 50px; */
 }
 
 /* .App-logo {
@@ -113,7 +113,7 @@ h2 {
   margin: 1rem 0;
   padding: 1rem 1rem 1.8rem 1rem;
   border-radius: 32px;
-  background-color: #272935;
+  background-color: var(--secondary-bg-color);
   color: white;
   min-height: 425px;
 }
