--- a/src/styles/dark.css
+++ b/src/styles/dark.css
@@ -15,6 +15,7 @@
   --secondary-font-color: rgba(247, 247, 247, 0.7);
   /* --background-color: #161a1e; */
   --background-color: #13151f;
+  --secondary-bg-color: #272935;
   --link-color: #d5663f;
   --nav-color: #13151f;
   --skills-bg-color: var(--background-color: #13151f);
