--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -39,7 +39,7 @@
 
 .nav-links ul {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
 }
 
@@ -54,7 +54,12 @@
     height: 25px;
     padding: 10px;
   }
-
+  .nav-links {
+    flex-basis: 75%;
+  }
+  .nav-links ul {
+    max-width: 60vw;
+  }
   .nav__avatar {
     right: 10px;
   }
