--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -12,7 +12,7 @@
   background-position-y: top;
   background-position-x: right;
   font-size: calc(10px + 2vmin);
-  border-top: 1px solid saddlebrown;
+  border-top: 1px solid transparent;
 }
 
 .App-projects .info-text {
