--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -7,7 +7,7 @@
   min-height: 100vh;
   background-color: var(--skills-bg-color);
   font-size: calc(10px + 2vmin);
-  /* border-top: 1px solid saddlebrown; */
+  border-top: 1px solid transparent;
 }
 
 .App-skills .chart-parent {
@@ -16,11 +16,19 @@
   align-items: center;
   justify-content: center;
   width: 100%;
+  gap: 2rem 0;
   max-width: 100%;
+  margin: 2rem auto;
+  padding: 2rem 0;
 }
 
 .App-skills .chart-parent .chart-container {
-  flex-basis: 50%;
+  flex-basis: 33%;
+  padding: 2rem 0;
+}
+.App-skills .chart-parent .chart-container:hover {
+  background-color: var(--secondary-bg-color);
+  border-radius: 32px;
 }
 
 @media screen and (max-width: 768px) {
