--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,8 +3,8 @@
 @import "./header.css";
 @import "./skills.css";
 @import "./projects.css";
+@import "./chips.css";
 /* @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/brands.min.css"); */
-
 .App {
   text-align: center;
   display: flex;
@@ -140,6 +140,7 @@ h2 {
   line-height: 1.6;
   font-weight: bold;
   margin-bottom: 0;
+  margin-top: 0;
   text-align: left;
 }
 
