refactor : added transitions

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,6 +5,7 @@
 @import "./projects.css";
 @import "./chips.css";
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/brands.min.css");
+
 .App {
   text-align: center;
   display: flex;
@@ -163,6 +164,7 @@ h2 {
   font-size: 1rem;
   line-height: 1.6;
 }
+
 .card .read-more {
   margin-top: auto;
 }
@@ -170,6 +172,7 @@ h2 {
 .card button .km-text:hover {
   text-decoration: underline;
 }
+
 .card button {
   font-weight: 800;
   font-family: "Quicksand", "Josefin Sans", "sans-serif";
@@ -189,11 +192,9 @@ h2 {
 
 .g-text:hover {
   background: rgb(63, 94, 251);
-  background: linear-gradient(
-    90deg,
-    rgba(63, 94, 251, 1) 0%,
-    rgba(252, 70, 107, 1) 100%
-  );
+  background: linear-gradient(90deg,
+      rgba(63, 94, 251, 1) 0%,
+      rgba(252, 70, 107, 1) 100%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -203,13 +204,11 @@ h2 {
 }
 
 .flag {
-  background-image: linear-gradient(
-    0deg,
-    #138808 33%,
-    #ffffff 33%,
-    #ffffff 66%,
-    #ff9933 66%
-  );
+  background-image: linear-gradient(0deg,
+      #138808 33%,
+      #ffffff 33%,
+      #ffffff 66%,
+      #ff9933 66%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -223,12 +222,14 @@ h2 {
     text-align: left;
     line-height: 1.6;
   }
+
   .card-row {
     flex-flow: row nowrap;
     overflow-x: auto;
     padding: 1rem;
     margin-left: -1rem;
   }
+
   .card {
     margin: 0 1rem 0 0;
     max-width: 75vw;
@@ -244,3 +245,97 @@ h2 {
     transform: rotate(360deg);
   }
 } */
+@keyframes index__main-load {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(16px);
+    transform: translateY(16px)
+  }
+
+  33% {
+    opacity: 0
+  }
+
+  45% {
+    opacity: .4;
+    -webkit-transform: translateY(16px);
+    transform: translateY(16px)
+  }
+
+  50% {
+    -webkit-transform: translateY(16px);
+    transform: translateY(16px);
+    opacity: .7
+  }
+
+  to {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1
+  }
+}
+
+@-webkit-keyframes index__main-load {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(16px);
+    transform: translateY(16px);
+  }
+
+  33% {
+    opacity: 0;
+  }
+
+  45% {
+    opacity: 0.4;
+    -webkit-transform: translateY(16px);
+    transform: translateY(16px);
+  }
+
+  50% {
+    -webkit-transform: translateY(16px);
+    transform: translateY(16px);
+    opacity: 0.7;
+  }
+
+  to {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes index__banner-load {
+  0% {
+   -webkit-transform:translateY(20px);
+   transform:translateY(20px);
+   opacity:.7
+  }
+  to {
+   -webkit-transform:translateY(0);
+   transform:translateY(0);
+   opacity:1
+  }
+ }
+ @keyframes index__banner-load {
+  0% {
+   -webkit-transform:translateY(20px);
+   transform:translateY(20px);
+   opacity:.7
+  }
+  to {
+   -webkit-transform:translateY(0);
+   transform:translateY(0);
+   opacity:1
+  }
+ }
+
+
+.animate-start {
+  -webkit-animation: index__main-load 1s ease-out;
+  animation: index__main-load 1s ease-out
+}
+.animate-banner {
+  -webkit-animation:index__banner-load .5s ease-out;
+ animation:index__banner-load .5s ease-out;
+}
